--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/iariyami/burger-app.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Ibrahim Riyami",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/iariyami/burger-app/issues"
